<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen_lcd"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:gravity="center">

        <TextView
            android:id="@+id/TextView_LCD_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lcd_title" 
            android:textSize="30dp"/>
    </LinearLayout>
	
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:gravity="center">

        <TextView
            android:id="@+id/lcdinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lcdinfo" 
            android:textSize="40dp"/>
    </LinearLayout>

    <LinearLayout        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/btn_lcd_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pass" />

        <Button
            android:id="@+id/btn_lcd_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fail" />

        <Button
            android:id="@+id/btn_lcd_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>