<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res/com.emdoor.autotest"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="#000000"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="6"
        android:fitsSystemWindows="true" >

        <TableRow
            style="@style/horizontalline"
            android:layout_width="fill_parent"
            android:layout_height="3dp" >

            <View
                style="@style/horizontalline"
                android:layout_height="3dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/lcd"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                myapp:selftext="@string/lcd" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/touch"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="2"
                myapp:selftext="@string/touch" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/wifi"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="3"
                myapp:selftext="@string/wifi" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/bluetooth"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="4"
                myapp:selftext="@string/bluetooth" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            style="@style/horizontalline"
            android:layout_width="fill_parent"
            android:layout_height="3dp" >

            <View
                style="@style/horizontalline"
                android:layout_height="3dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/usb"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="7"
                myapp:selftext="@string/usb" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/front_camera"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="19"
                myapp:selftext="@string/font_camera" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/camera"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="8"
                myapp:selftext="@string/back_camera" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/gsensor"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="9"
                myapp:selftext="@string/gsensor" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            style="@style/horizontalline"
            android:layout_width="fill_parent"
            android:layout_height="3dp" >

            <View
                style="@style/horizontalline"
                android:layout_height="3dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/speaker"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="11"
                myapp:selftext="@string/speaker" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/headset"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="11"
                myapp:selftext="@string/headset" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/mic"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="12"
                myapp:selftext="@string/onboard_mic" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/ext_mic"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="12"
                myapp:selftext="@string/ext_mic" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            style="@style/horizontalline"
            android:layout_width="fill_parent"
            android:layout_height="3dp" >

            <View
                style="@style/horizontalline"
                android:layout_height="3dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/tfcard"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="13"
                myapp:selftext="@string/tfcard" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/hdmi"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="14"
                myapp:selftext="@string/hdmi" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/battery"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="15"
                myapp:selftext="@string/battery" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />

            <com.emdoor.autotest.MyButton
                android:id="@+id/brightness"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="18"
                myapp:selftext="@string/brightness" />

            <View
                style="@style/TableBorder"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            style="@style/horizontalline"
            android:layout_width="fill_parent"
            android:layout_height="3dp" >

            <View
                style="@style/horizontalline"
                android:layout_height="3dp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:fitsSystemWindows="true" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/test" />

            <Button
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/close" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear" />

        </TableRow>
    </TableLayout>

</LinearLayout>