<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" 
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/tvbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bttest"
            android:textSize="30dp" >
        </TextView>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" 
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/bt_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btcheck"
            android:textSize="30dp" >
        </TextView>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" 
        android:paddingTop="20dp">
        
        <TextView
            android:id="@+id/bt_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btscan"
            android:textSize="30dp" >
        </TextView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >

        <Button
            android:id="@+id/btnbtok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pass" >
        </Button>

        <Button
            android:id="@+id/btnbtfail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fail" >
        </Button>

        <Button
            android:id="@+id/btnbtback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" >
        </Button>
    </LinearLayout>

</LinearLayout>